--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, a possimus, eveniet nemo quibusdam sit omnis unde eligendi adipisci neque saepe doloremque harum nostrum eius, odio facilis aspernatur dolores enim.</p>
         </article>
         <article>
-            <h2>Atigo 002</h2>
-            <p>Texto Atigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sint soluta laboriosam temporibus suscipit quidem fugit quasi corrupti consectetur necessitatibus quo odio totam unde reiciendis obcaecati adipisci aperiam optio vero.</p>
         </article>
     </main>
 </body>
