--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Curso em Vídeo</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
