--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, a possimus, eveniet nemo quibusdam sit omnis unde eligendi adipisci neque saepe doloremque harum nostrum eius, odio facilis aspernatur dolores enim.</p>
+            <p><a href="curso-html5.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sint soluta laboriosam temporibus suscipit quidem fugit quasi corrupti consectetur necessitatibus quo odio totam unde reiciendis obcaecati adipisci aperiam optio vero.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
